change PNG to WEBP

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="card-grid">
           <div class="note-card">
             <div class="note-card-image">
-              <img src="docs/F.png"/>
+              <img src="docs/F.webp"/>
             </div>
             <div class="note-card-body">
               <h3>Sugarcane Pan-omics</h3>
@@ -90,7 +90,7 @@
               </div>
             </div>
           <!-- <div class="oa-card"> -->
-              <!-- <div class="card-image"><img src="docs/A.png"/></div> -->
+              <!-- <div class="card-image"><img src="docs/A.webp"/></div> -->
             <div class="card-body">
               <h3>Sugarcane Pan-RNAome</h3>
               <p>This work focuses on characterizing ncRNAs and lncRNAs in sugarcane, addressing gaps in understanding their variability, conservation, co-expression patterns, and functional roles.</p>
@@ -107,7 +107,7 @@
           </div>
 
           <div class="oa-card">
-            <div class="card-image"><img src="docs/B.png"/></div>
+            <div class="card-image"><img src="docs/B.webp"/></div>
             <div class="card-body">
               <h3>Sugarcane Pan-transcriptome</h3>
               <p>This work provide a robust framework for pan-transcriptome analysis in complex polyploid crops and resources to enhance sugarcane breeding programs.</p>
@@ -129,7 +129,7 @@
       <div class="research-category" data-category="computational-reproducibility">
         <div class="card-grid">
           <div class="note-card">
-            <div class="note-card-image"><img src="docs/F.png" alt="Computational Reproducibility"/></div>
+            <div class="note-card-image"><img src="docs/F.webp" alt="Computational Reproducibility"/></div>
             <div class="note-card-body">
               <h3>Computational Reproducibility</h3>
               <p>Ensuring reproducibility remains one of the major challenges in computational biology and data science. Despite the growing availability of large-scale datasets, many published results are difficult to replicate due to incomplete documentation, non-standardized workflows, missing metadata, or dependence on specific computing environment. Whether in the context of gene expression studies or predictive modeling, transparent and reproducible practices are essential for building confidence in scientific results.</p>
@@ -141,7 +141,7 @@
           </div>
 
           <div class="oa-card">
-            <div class="card-image"><img src="docs/D.png"/></div>
+            <div class="card-image"><img src="docs/D.webp"/></div>
             <div class="card-body">
               <h3>KAPT</h3>
               <p>Nextflow pipeline for automated inference of the <i>Kappaphycus alvarezii</i> proteome through de novo transcriptome assembly and comprehensive functional annotation.</p>
@@ -157,7 +157,7 @@
           </div>
 
           <div class="oa-card">
-            <div class="card-image"><img src="docs/E.png"/></div>
+            <div class="card-image"><img src="docs/E.webp"/></div>
             <div class="card-body">
               <h3>T-M Integration</h3>
               <p>Nextflow pipeline for automated integration of transcriptomic and microbiome data, performing cross-correlation analysis to uncover potential host transcriptome-microbiome associations.</p>
@@ -173,7 +173,7 @@
           </div>
 
           <div class="oa-card">
-            <div class="card-image"><img src="docs/G.png"/></div>
+            <div class="card-image"><img src="docs/G.webp"/></div>
             <div class="card-body">
               <h3>R2C</h3>
               <p>Nextflow pipeline for scalable gene co-expression network analysis. It automates the process from data download, quantification and network construction.</p>
@@ -189,7 +189,7 @@
           </div>
 
           <div class="oa-card">
-            <div class="card-image"><img src="docs/I.png"/></div>
+            <div class="card-image"><img src="docs/I.webp"/></div>
             <div class="card-body">
               <h3>seabed symphony</h3>
               <p>Metagenomics pipeline for Biosynthetic Gene Cluster discovery. Designed for identification of novel BGCs in microbiome of marine sediments.</p>
@@ -205,7 +205,7 @@
           </div>
 
           <div class="oa-card">
-            <div class="card-image"><img src="docs/J.png"/></div>
+            <div class="card-image"><img src="docs/J.webp"/></div>
             <div class="card-body">
               <h3>YAATAP</h3>
               <p>Snakemake pipeline for de novo transcriptome assembly. It performs every step from raw RNA-seq data download to the final transcriptome assembly and quality assessment.</p>
@@ -226,7 +226,7 @@
       <div class="research-category" data-category="software-development">
         <div class="card-grid">
           <div class="note-card">
-            <div class="note-card-image"><img src="docs/F.png" alt="Software Development"/></div>
+            <div class="note-card-image"><img src="docs/F.webp" alt="Software Development"/></div>
             <div class="note-card-body">
               <h3>Software Development</h3>
               <p>My path into software development began in the biological sciences. Working with the massive datasets produced by modern sequencing technologies, I quickly realized that understanding biology in the twenty-first century requires far more than laboratory skills, it demands the ability to design, automate, and scale analyses across terabytes of information. What began as a necessity soon became a passion.</p>
@@ -238,7 +238,7 @@
           </div>
 
             <div class="oa-card">
-              <div class="card-image"><img src="docs/Z.png"/></div>
+              <div class="card-image"><img src="docs/Z.webp"/></div>
             <div class="card-body">
               <h3>ContFree-NGS</h3>
               <p>A lightweight, open-source tool designed to remove contaminant sequences from NGS datasets.</p>
@@ -255,7 +255,7 @@
           </div>
 
           <div class="oa-card">
-            <div class="card-image"><img src="docs/K.png"/></div>
+            <div class="card-image"><img src="docs/K.webp"/></div>
             <div class="card-body">
               <h3>paper-trackr</h3>
               <p>Tired of missing out on cool papers? stay up to date with paper-trackr!</p>
@@ -283,7 +283,7 @@
 
       <div class="card-grid">
         <div class="oa-card">
-          <div class="card-image"><img src="docs/lbb_2025.png"/></div>
+          <div class="card-image"><img src="docs/lbb_2025.webp"/></div>
           <div class="card-body">
             <h3>LBB 2025</h3>
             <p>3rd place at the "Liga Brasileira de Bioinformática 2025", the largest bioinformatics competition in Latin America, focused on solving computational biology challenges.</p> 
@@ -300,7 +300,7 @@
         </div>
 
         <div class="oa-card">
-          <div class="card-image"><img src="docs/mendelics_2021.png"/></div>
+          <div class="card-image"><img src="docs/mendelics_2021.webp"/></div>
           <div class="card-body">
             <h3>Mendelics 2021</h3>
             <p>3rd place at the "Mendelics Challenge". Developed a fully automated variant calling pipeline in less than 48 hours using real genomic data.</p>
@@ -317,7 +317,7 @@
         </div>
 
         <div class="oa-card">
-          <div class="card-image"><img src="docs/biohack_2018.png"/></div>
+          <div class="card-image"><img src="docs/biohack_2018.webp"/></div>
           <div class="card-body">
             <h3>BIOHACK 2018</h3>
             <p>2nd place at the "Synthetic Biology Hackathon (BIOHACK)". Designed <b>BIOREMEDYATOR</b>, a bioremediation project presented at Brazil’s largest biotechnology conference.</p>
